@@ -70,7 +70,7 @@ void speedRun_resetTotal()
 
 #define bool2alpha(b) (b ? 1.f : 0.1f)
 
-static Controls_t s_displayControls = Controls_t();
+static Controls_t s_displayControls[2] = {Controls_t()};
 
 void speedRun_render()
 {
@@ -82,61 +82,68 @@ void speedRun_render()
 
     s_gamePlayTimer.render();
 
-    const auto &c = s_displayControls;
+    int plrs = numPlayers > 2 ? 1 : numPlayers;
+    int plrs_x[] = {8, ScreenW - 200};
 
+    for(int i = 0; i < plrs; ++i)
+    {
+        const auto &c = s_displayControls[i];
+        int x = plrs_x[i];
+        int y = ScreenH - 16;
 #if 1
-    if(c.Up)
-        SuperPrint("]", 3, 8, 576);
+        if(c.Up)
+            SuperPrint("]", 3, x, ScreenH - 24);
 
-    if(c.Down)
-        SuperPrint("v", 3, 24, 584);
+        if(c.Down)
+            SuperPrint("v", 3, x + 16, y);
 
-    if(c.Left)
-        SuperPrint("<", 3, 40, 584);
+        if(c.Left)
+            SuperPrint("<", 3, x + 32, y);
 
-    if(c.Right)
-        SuperPrint(">", 3, 56, 584);
+        if(c.Right)
+            SuperPrint(">", 3, x + 48, y);
 
-    if(c.AltJump)
-        SuperPrint("P", 3, 72, 584);
+        if(c.AltJump)
+            SuperPrint("P", 3, x + 64, y);
 
-    if(c.Jump)
-        SuperPrint("J", 3, 88, 584);
+        if(c.Jump)
+            SuperPrint("J", 3, x + 80, y);
 
-    if(c.AltRun)
-        SuperPrint("N", 3, 104, 584);
+        if(c.AltRun)
+            SuperPrint("N", 3, x + 96, y);
 
-    if(c.Run)
-        SuperPrint("R", 3, 120, 584);
+        if(c.Run)
+            SuperPrint("R", 3, x + 112, y);
 
-    if(c.Start)
-    {
-        SuperPrint("S", 3, 136, 584);
-        SuperPrint("T", 3, 152, 584);
-    }
+        if(c.Start)
+        {
+            SuperPrint("S", 3, x + 128, y);
+            SuperPrint("T", 3, x + 144, y);
+        }
 
-    if(c.Drop)
-    {
-        SuperPrint("S", 3, 168, 584);
-        SuperPrint("E", 3, 184, 584);
-    }
+        if(c.Drop)
+        {
+            SuperPrint("S", 3, x + 160, y);
+            SuperPrint("E", 3, x + 176, y);
+        }
 
 #else
-    SuperPrint("]", 3, 8, 576, 1.f, 1.f, 1.f, bool2alpha(c.Up));
-    SuperPrint("v", 3, 24, 584, 1.f, 1.f, 1.f, bool2alpha(c.Down));
-    SuperPrint("<", 3, 40, 584, 1.f, 1.f, 1.f, bool2alpha(c.Left));
-    SuperPrint(">", 3, 56, 584, 1.f, 1.f, 1.f, bool2alpha(c.Right));
-    SuperPrint("P", 3, 72, 584, 1.f, 1.f, 1.f, bool2alpha(c.AltJump));
-    SuperPrint("J", 3, 88, 584, 1.f, 1.f, 1.f, bool2alpha(c.Jump));
-    SuperPrint("N", 3, 104, 584, 1.f, 1.f, 1.f, bool2alpha(c.AltRun));
-    SuperPrint("R", 3, 120, 584, 1.f, 1.f, 1.f, bool2alpha(c.Run));
+        SuperPrint("]", 3, 8, 576, 1.f, 1.f, 1.f, bool2alpha(c.Up));
+        SuperPrint("v", 3, 24, 584, 1.f, 1.f, 1.f, bool2alpha(c.Down));
+        SuperPrint("<", 3, 40, 584, 1.f, 1.f, 1.f, bool2alpha(c.Left));
+        SuperPrint(">", 3, 56, 584, 1.f, 1.f, 1.f, bool2alpha(c.Right));
+        SuperPrint("P", 3, 72, 584, 1.f, 1.f, 1.f, bool2alpha(c.AltJump));
+        SuperPrint("J", 3, 88, 584, 1.f, 1.f, 1.f, bool2alpha(c.Jump));
+        SuperPrint("N", 3, 104, 584, 1.f, 1.f, 1.f, bool2alpha(c.AltRun));
+        SuperPrint("R", 3, 120, 584, 1.f, 1.f, 1.f, bool2alpha(c.Run));
 
-    SuperPrint("S", 3, 136, 584, 1.f, 1.f, 1.f, bool2alpha(c.Start));
-    SuperPrint("T", 3, 152, 584, 1.f, 1.f, 1.f, bool2alpha(c.Start));
+        SuperPrint("S", 3, 136, 584, 1.f, 1.f, 1.f, bool2alpha(c.Start));
+        SuperPrint("T", 3, 152, 584, 1.f, 1.f, 1.f, bool2alpha(c.Start));
 
-    SuperPrint("S", 3, 168, 584, 1.f, 1.f, 1.f, bool2alpha(c.Drop));
-    SuperPrint("E", 3, 184, 584, 1.f, 1.f, 1.f, bool2alpha(c.Drop));
+        SuperPrint("S", 3, 168, 584, 1.f, 1.f, 1.f, bool2alpha(c.Drop));
+        SuperPrint("E", 3, 184, 584, 1.f, 1.f, 1.f, bool2alpha(c.Drop));
 #endif
+    }
 
     SuperPrintRightAlign(fmt::format_ne("Mode {0}", g_speedRunnerMode), 3, ScreenW - 2, 2, 1.f, 0.3f, 0.3f, 0.5f);
 }
@@ -170,10 +177,11 @@ void speedRun_setSemitransparentRender(bool r)
     s_gamePlayTimer.setSemitransparent(r);
 }
 
-void speedRun_syncControlKeys(Controls_t &keys)
+void speedRun_syncControlKeys(int plr, Controls_t &keys)
 {
     if(g_speedRunnerMode == SPEEDRUN_MODE_OFF)
         return; // Do nothing
 
-    SDL_memcpy(&s_displayControls, &keys, sizeof(Controls_t));
+    SDL_assert(plr >= 0 && plr < 2);
+    SDL_memcpy(&s_displayControls[plr], &keys, sizeof(Controls_t));
 }
