@@ -16,6 +16,7 @@ Changes for 1.3.5.2
 -Portal warps have been allowed to be used for level entrances and level exits (Instant warps kept unsupported to avoid possible compatibility issues)
 -Added the cannon pipes that can shoot the player with a given speed
 -Added the workaround for custom background2-42 that has non-multiple 4 height (there are several custom sprites with the 3455 invalid height, they must be 3466)
+-Fixed an incorrect speed-run timer render at multiplayer mode
 
 Changes for 1.3.5.1
 -Episodes and battle levels lists now loading in the separated thread with a progress showing
